--- a/WpfAgendaDatabase/WpfAgendaDatabase.csproj
+++ b/WpfAgendaDatabase/WpfAgendaDatabase.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Ressource\" />
+  </ItemGroup>
+
 </Project>
