--- a/WpfAgendaDatabase/WpfAgendaDatabase.csproj
+++ b/WpfAgendaDatabase/WpfAgendaDatabase.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Ressource\IconeAgenda.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.Apis.Calendar.v3" Version="1.67.0.3297" />
     <PackageReference Include="LiveCharts" Version="0.9.7" />
     <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
@@ -20,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Ressource\" />
+    <Resource Include="Ressource\IconeAgenda.ico" />
   </ItemGroup>
 
 </Project>
